bin/testsuite/tests/compiler/src/errors/compiler2729.swg
#global testerror "Err0422"

#[Swag.Inline]
func toto()->s32 throw
{
    return 0
}

#test
{
    var x = toto()
}
